Entity Accessorial Map: Add serviceNotOffered field
